<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph.xml"
    app:startDestination="@id/mainFragment">

    <fragment
        android:id="@+id/mainFragment"
        android:name="com.satinavrobotics.satibot.main.MainFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_main">
        <action
            android:id="@+id/action_mainFragment_to_freeRoamFragment"
            app:destination="@id/freeRoamFragment" />
        <action
            android:id="@+id/action_mainFragment_to_loggerFragment"
            app:destination="@id/loggerFragment" />

        <action
            android:id="@+id/action_mainFragment_to_modelManagementFragment"
            app:destination="@id/modelManagementFragment" />
        <action
            android:id="@+id/action_mainFragment_to_robotInfoFragment"
            app:destination="@id/robotInfoFragment" />
        <action
            android:id="@+id/action_mainFragment_to_mapManagementFragment"
            app:destination="@id/mapManagementFragment" />
        <action
            android:id="@+id/action_mainFragment_to_pointCloudMappingFragment"
            app:destination="@id/pointCloudMappingFragment" />
        <action
            android:id="@+id/action_mainFragment_to_depthVisualizationFragment"
            app:destination="@id/depthVisualizationFragment" />
        <action
            android:id="@+id/action_mainFragment_to_autonomousNavigationFragment"
            app:destination="@id/autonomousNavigationFragment" />

    </fragment>
    <fragment
        android:id="@+id/freeRoamFragment"
        android:name="com.satinavrobotics.satibot.robot.RemoteControlFragment"
        android:label="Remote Control"
        tools:layout="@layout/fragment_free_roam" />

    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.satinavrobotics.satibot.main.SettingsFragment"
        android:label="@string/settings" />

    <action
        android:id="@+id/open_settings_fragment"
        app:destination="@id/settingsFragment"
        />

    <fragment
        android:id="@+id/bluetoothFragment"
        android:name="com.satinavrobotics.satibot.main.BluetoothFragment"
        android:label="@string/bluetooth" />

    <action
        android:id="@+id/open_bluetooth_fragment"
        app:destination="@id/bluetoothFragment" />

    <fragment
        android:id="@+id/usbFragment"
        android:name="com.satinavrobotics.satibot.main.UsbFragment"
        android:label="@string/usb" />

    <action
        android:id="@+id/open_usb_fragment"
        app:destination="@id/usbFragment"
        />

    <fragment
        android:id="@+id/liveKitInfoFragment"
        android:name="com.satinavrobotics.satibot.livekit.LiveKitInfoFragment"
        android:label="@string/livekit" />

    <action
        android:id="@+id/open_livekit_info_fragment"
        app:destination="@id/liveKitInfoFragment"
        />

    <fragment
        android:id="@+id/loggerFragment"
        android:name="com.satinavrobotics.satibot.logging.LoggerFragment"
        android:label="GamePad Control"
        tools:layout="@layout/fragment_logger" />

    <fragment
        android:id="@+id/profileFragment"
        android:name="com.satinavrobotics.satibot.profile.ProfileFragment"
        android:label="My Profile" >
        <action
            android:id="@+id/action_profileFragment_to_EditProfileFragment"
            app:destination="@id/EditProfileFragment" />
    </fragment>

    <action
        android:id="@+id/open_profile_fragment"
        app:destination="@id/profileFragment" />


    <fragment
        android:id="@+id/modelManagementFragment"
        android:name="com.satinavrobotics.satibot.modelManagement.ModelManagementFragment"
        android:label="fragment_model_management"
        tools:layout="@layout/fragment_model_management" />





    <fragment
        android:id="@+id/EditProfileFragment"
        android:name="com.satinavrobotics.satibot.profile.EditProfileFragment"
        android:label="editProfile"
        tools:layout="@layout/fragment_edit_profile" />
    <fragment
        android:id="@+id/robotInfoFragment"
        android:name="com.satinavrobotics.satibot.robot.RobotInfoFragment"
        android:label="Robot Info" />
    <fragment
        android:id="@+id/mapManagementFragment"
        android:name="com.satinavrobotics.satibot.mapManagement.MapManagementFragment"
        android:label="Map Management"
        tools:layout="@layout/fragment_map_management">
        <action
            android:id="@+id/action_mapManagementFragment_to_mapScanningFragment"
            app:destination="@id/mapScanningFragment" />
        <action
            android:id="@+id/action_mapManagementFragment_to_mapResolvingFragment"
            app:destination="@id/mapResolvingFragment" />
    </fragment>

    <fragment
        android:id="@+id/mapScanningFragment"
        android:name="com.satinavrobotics.satibot.mapManagement.MapScanningFragment"
        android:label="Map Scanning"
        tools:layout="@layout/fragment_map_scanning" />

    <fragment
        android:id="@+id/mapResolvingFragment"
        android:name="com.satinavrobotics.satibot.mapManagement.MapResolvingFragment"
        android:label="Map Resolving"
        tools:layout="@layout/fragment_map_resolving" />

    <fragment
        android:id="@+id/pointCloudMappingFragment"
        android:name="com.satinavrobotics.satibot.mapManagement.PointCloudMappingFragment"
        android:label="Pointcloud Mapping"
        tools:layout="@layout/fragment_pointcloud_mapping" />
    <fragment
        android:id="@+id/localControlFragment"
        android:name="com.satinavrobotics.satibot.robot.BluetoothControlFragment"
        android:label="@string/local_control" />

    <action
        android:id="@+id/action_mainFragment_to_localControlFragment"
        app:destination="@id/localControlFragment" />

    <fragment
        android:id="@+id/depthVisualizationFragment"
        android:name="com.satinavrobotics.satibot.depth.DepthVisualizationFragment"
        android:label="Depth Management"
        tools:layout="@layout/fragment_depth_visualization" />

    <fragment
        android:id="@+id/autonomousNavigationFragment"
        android:name="com.satinavrobotics.satibot.robot.DepthNavigationFragment"
        android:label="Depth Navigation"
        tools:layout="@layout/fragment_autonomous_navigation" />

    <fragment
        android:id="@+id/pdTuningFragment"
        android:name="com.satinavrobotics.satibot.vehicle.pd.PdTuningFragment"
        android:label="PD Tuning"
        tools:layout="@layout/fragment_pd_tuning" />

    <action
        android:id="@+id/action_mainFragment_to_pdTuningFragment"
        app:destination="@id/pdTuningFragment" />

</navigation>
